minor adjustments for testing purposes