@@ -2,8 +2,11 @@ package com.desiato.puresynth.controllers;
 
 import com.desiato.puresynth.BaseTest;
 import com.desiato.puresynth.models.User;
+import com.desiato.puresynth.services.AuthenticationService;
 import com.desiato.puresynth.services.UserService;
 import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
@@ -12,6 +15,7 @@ import org.springframework.test.web.servlet.MvcResult;
 
 import java.util.UUID;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -21,38 +25,10 @@ public class LoginControllerTest extends BaseTest {
     @Autowired
     private PasswordEncoder passwordEncoder;
 
+    private static final Logger logger = LoggerFactory.getLogger(AuthenticationService.class);
 
-    @Test
-    public void authenticateUser_WhenCredentialsAreValid_ShouldAuthenticateSuccessfully() throws Exception {
-        String uniqueEmail = generateUniqueEmail();
-        String password = "password123";
-        userService.createUser(uniqueEmail, passwordEncoder.encode(password));
 
-        String json = """
-                {
-                    "email": "%s",
-                    "password": "%s"
-                }
-                """.formatted(uniqueEmail, password);
 
-        MvcResult loginResult = mockMvc.perform(post("/api/login/")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(json))
-                .andExpect(status().isOk())
-                .andExpect(header().exists("Auth-Token"))
-                .andReturn();
-
-        String token = loginResult.getResponse().getHeader("Auth-Token");
-
-        // Use the token to access a protected endpoint
-        mockMvc.perform(get("/api/protected")
-                        .header("Auth-Token", token))
-                .andExpect(status().isOk());
-
-        // Cleanup
-        sessionRepository.deleteById(token);
-        userRepository.deleteByEmail(uniqueEmail);
-    }
 
     @Test
     public void authenticateUser_WhenPasswordIsInvalid_ShouldReturnUnauthorized() throws Exception {
@@ -72,28 +48,45 @@ public class LoginControllerTest extends BaseTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(json))
                 .andExpect(status().isUnauthorized())
-                .andExpect(content().string("Authentication failed"));
+                .andExpect(content().string("Unauthorized"));
     }
 
     @Test
-    public void authenticateUser_WhenEmailIsInvalid_ShouldReturnUnauthorized() throws Exception {
+    public void authenticateUser_WhenCredentialsAreValid_ShouldAuthenticateSuccessfully() throws Exception {
         String uniqueEmail = generateUniqueEmail();
         String password = "password123";
+
+        logger.info("Created user with email: {}", uniqueEmail);
+
         userService.createUser(uniqueEmail, passwordEncoder.encode(password));
 
-        String invalidEmail = "nonUser@mail.com";
-        String json = """
-                {
-                    "email": "%s",
-                    "password": "%s"
-                }
-                """.formatted(invalidEmail, password);
+        String loginJson = String.format("""
+            {
+                "email": "%s",
+                "password": "%s"
+            }
+            """, uniqueEmail, password);
 
-        mockMvc.perform(post("/api/login/")
+        logger.info("Sending login request with email: {}", uniqueEmail);
+
+        MvcResult loginResult = mockMvc.perform(post("/api/login/")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(json))
-                .andExpect(status().isUnauthorized())
-                .andExpect(content().string("Authentication failed"));
+                        .content(loginJson))
+                .andExpect(status().isOk())
+                .andExpect(header().exists("Auth-Token"))
+                .andReturn();
+
+        logger.info("Login response status code: {}", loginResult.getResponse().getStatus());
+
+        String token = loginResult.getResponse().getHeader("Auth-Token");
+
+        assertNotNull(token, "Authentication token is missing or invalid");
+
+        logger.info("Retrieved token: {}", token);
+
+        mockMvc.perform(get("/api/user/hello") // Replace with your protected resource path
+                        .header("Auth-Token", token))
+                .andExpect(status().isOk());
     }
 
     @Test
